fixed search result select button style for quick search elements that were not submitted via JavaScript, fixes #7363

--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -73,3 +73,15 @@ input.quicksearchbox {
 .ui-autocomplete {
     z-index: 99999;
 }
+
+.QuickSearchSelect {
+    width: calc(100% - 32px);
+    
+    + input[type=submit] {
+        float: none;
+        margin-left: 0px;
+        height: 30px;
+        background-color: #7E92B0;
+        background-position: center center;
+    }
+}
