--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7108,6 +7108,41 @@ form.settings-avatar footer {
 #select_fach_abschluss > tbody > tr:last-child > td {
   border-bottom: 1px solid #e2e3e5;
 }
+table.default tr.subcourses td:first-child {
+  margin-left: 20px;
+}
+table.default tr.subcourses td:nth-child(2),
+table.default tr.subcourses td:nth-child(3),
+table.default tr.subcourses td:nth-child(4) {
+  padding-left: 20px;
+}
+table.default tr.subcourses td.gruppe0 {
+  background: linear-gradient(to right, white, #ffca5c) !important;
+}
+table.default tr.subcourses td.gruppe1 {
+  background: linear-gradient(to right, white, #d60000) !important;
+}
+table.default tr.subcourses td.gruppe2 {
+  background: linear-gradient(to right, white, #f58b33) !important;
+}
+table.default tr.subcourses td.gruppe3 {
+  background: linear-gradient(to right, white, #fac599) !important;
+}
+table.default tr.subcourses td.gruppe4 {
+  background: linear-gradient(to right, white, #8bbd40) !important;
+}
+table.default tr.subcourses td.gruppe5 {
+  background: linear-gradient(to right, white, #c5de9f) !important;
+}
+table.default tr.subcourses td.gruppe6 {
+  background: linear-gradient(to right, white, #b8c2d5) !important;
+}
+table.default tr.subcourses td.gruppe7 {
+  background: linear-gradient(to right, white, #7e92b0) !important;
+}
+table.default tr.subcourses td.gruppe8 {
+  background: linear-gradient(to right, white, #b02e7c) !important;
+}
 @media (min-width: 576px) {
   #select_fach_abschluss tbody td:before {
     display: none;
