--- a/public/assets/stylesheets/less/my_courses.less
+++ b/public/assets/stylesheets/less/my_courses.less
@@ -1,37 +1,18 @@
 table.default {
+  tr.has-subcourses {
+    box-shadow: 0 5px 5px -4px black;
+  }
   tr.subcourses {
+
+    &:last-child {
+      border-bottom: 1px solid black;
+    }
+
     td:first-child {
       margin-left: 20px;
     }
     td:nth-child(2), td:nth-child(3), td:nth-child(4) {
       padding-left: 20px;
-    }
-    td.gruppe0 {
-      background: linear-gradient(to right, white, #ffca5c) !important;
-    }
-    td.gruppe1 {
-      background: linear-gradient(to right, white, #d60000) !important;
-    }
-    td.gruppe2 {
-      background: linear-gradient(to right, white, #f58b33) !important;
-    }
-    td.gruppe3 {
-      background: linear-gradient(to right, white, #fac599) !important;
-    }
-    td.gruppe4 {
-      background: linear-gradient(to right, white, #8bbd40) !important;
-    }
-    td.gruppe5 {
-      background: linear-gradient(to right, white, #c5de9f) !important;
-    }
-    td.gruppe6 {
-      background: linear-gradient(to right, white, #b8c2d5) !important;
-    }
-    td.gruppe7 {
-      background: linear-gradient(to right, white, #7e92b0) !important;
-    }
-    td.gruppe8 {
-      background: linear-gradient(to right, white, #b02e7c) !important;
     }
   }
 }
