--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7118,6 +7118,9 @@ form.settings-avatar footer {
 #select_fach_abschluss > tbody > tr:last-child > td {
   border-bottom: 1px solid #e2e3e5;
 }
+table.default tr.has-subcourses {
+  box-shadow: 0 5px 5px -4px black;
+}
 table.default tr.subcourses td:first-child {
   margin-left: 20px;
 }
@@ -7126,32 +7129,8 @@ table.default tr.subcourses td:nth-child(3),
 table.default tr.subcourses td:nth-child(4) {
   padding-left: 20px;
 }
-table.default tr.subcourses td.gruppe0 {
-  background: linear-gradient(to right, white, #ffca5c) !important;
-}
-table.default tr.subcourses td.gruppe1 {
-  background: linear-gradient(to right, white, #d60000) !important;
-}
-table.default tr.subcourses td.gruppe2 {
-  background: linear-gradient(to right, white, #f58b33) !important;
-}
-table.default tr.subcourses td.gruppe3 {
-  background: linear-gradient(to right, white, #fac599) !important;
-}
-table.default tr.subcourses td.gruppe4 {
-  background: linear-gradient(to right, white, #8bbd40) !important;
-}
-table.default tr.subcourses td.gruppe5 {
-  background: linear-gradient(to right, white, #c5de9f) !important;
-}
-table.default tr.subcourses td.gruppe6 {
-  background: linear-gradient(to right, white, #b8c2d5) !important;
-}
-table.default tr.subcourses td.gruppe7 {
-  background: linear-gradient(to right, white, #7e92b0) !important;
-}
-table.default tr.subcourses td.gruppe8 {
-  background: linear-gradient(to right, white, #b02e7c) !important;
+table.default tr.subcourses:last-child {
+  border-bottom: 1px solid black;
 }
 @media (min-width: 576px) {
   #select_fach_abschluss tbody td:before {
