--- a/public/assets/stylesheets/less/my_courses.less
+++ b/public/assets/stylesheets/less/my_courses.less
@@ -5,7 +5,10 @@ table.default {
   tr.subcourses {
 
     &:last-child {
-      border-bottom: 1px solid black;
+      background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.25));
+      background-size: 100% 4px;
+      background-position: bottom;
+      background-repeat: no-repeat;
     }
 
     td:first-child {
