--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7130,7 +7130,10 @@ table.default tr.subcourses td:nth-child(4) {
   padding-left: 20px;
 }
 table.default tr.subcourses:last-child {
-  border-bottom: 1px solid black;
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.25));
+  background-size: 100% 4px;
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
 @media (min-width: 576px) {
   #select_fach_abschluss tbody td:before {
