header notifications: color the arrow of the box as well when the first notification is hovered, re #7116

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -277,6 +277,15 @@
 
             &:hover { background-color: fadeout(@light-gray-color, 80%);}
 
+            &:first-child:hover {
+                #arrow > .top(10px, fadeout(@light-gray-color, 80%));
+                margin-top: 0;
+                &::before {
+                    left: (@width - 20px);
+                    z-index: 2;
+                }
+            }
+
             // First child: no top-border and but rounded corners
             &:first-child {
                 border-top: 0;
