--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2267,6 +2267,27 @@ li#notification_container:hover .list {
 #notification_container .list .item:hover {
   background-color: rgba(109, 115, 123, 0.2);
 }
+#notification_container .list .item:first-child:hover {
+  position: relative;
+  margin-top: 10px;
+  margin-top: 0;
+}
+#notification_container .list .item:first-child:hover:before {
+  border: 10px solid rgba(109, 115, 123, 0);
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-bottom-color: rgba(109, 115, 123, 0.2);
+  bottom: 100%;
+  left: 50%;
+  margin-left: -10px;
+}
+#notification_container .list .item:first-child:hover::before {
+  left: 380px;
+  z-index: 2;
+}
 #notification_container .list .item:first-child {
   border-top: 0;
 }
