--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -41,7 +41,7 @@
         align-items: center;
         justify-content: space-between;
         list-style-type: none;
-        height: 100%;
+        height: 30px;
         padding: 0;
         > li {
             margin: 2px;
