--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2003,7 +2003,7 @@ form.default label.packed button {
   align-items: center;
   justify-content: space-between;
   list-style-type: none;
-  height: 100%;
+  height: 30px;
   padding: 0;
 }
 #barBottomright > ul > li,
