resurrect responsive navigation, fixes #7434

--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -58,6 +58,7 @@ label[for="responsive-toggle"] {
 
 #responsive-toggle:checked + #responsive-navigation {
     left: 0;
+    height: 100vh;
 }
 
 #responsive-navigation {
