fix display order of institutes on user institute administration page (introduces .contentbox article.indented for a better display structure), fixes #7438

--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -208,5 +208,12 @@ section.contentbox {
                 .icon('before', "arr_1right", 'new');
             }
         }
+
+        &.indented {
+            margin-left: calc(10px + 1em);
+            > header {
+                background-color: mix(@content-color, #fff, 10%);
+            }
+        }
     }
 }
